salesforce/force-app/main/default/objects/FacebookListingGenerationJob__c/FacebookListingGenerationJob__c.object-meta.xml
<CustomObject>
    <label>Facebook Listing Generation Job</label>
    <nameField>
        <displayFormat>GLJ-{000000}</displayFormat>
        <label>Generation Job</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facebook Listing Generation Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>