salesforce/force-app/main/default/objects/FacebookListingGenerationJob__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <label>Correlation Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>