salesforce/force-app/main/default/objects/FacebookListingGenerationJob__c/fields/ErrorText__c.field-meta.xml
<CustomField>
    <label>Error Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>