salesforce/force-app/main/default/objects/FacebookListingGenerationJob__c/fields/PayloadJson__c.field-meta.xml
<CustomField>
    <fullName>PayloadJson__c</fullName>
    <label>Payload Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>