salesforce/force-app/main/default/objects/FacebookListingGenerationJob__c/fields/ResultText__c.field-meta.xml
<CustomField>
    <fullName>ResultText__c</fullName>
    <label>Result Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>