salesforce/force-app/main/default/objects/FacebookListingGenerationJob__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>